--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Image Uploading Website",
   "main": "index.js",
   "scripts": {
-    "start" : "node server.js",
+    "start": "node server.js",
     "test": "mocha -r test/testhelper.js -R spec test/**/*.test.js"
   },
   "author": "Emir Sarrafoglu",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "dotenv": "^6.0.0",
     "mocha": "^5.2.0",
     "proxyquire": "^2.1.0",
     "sinon": "^6.1.5",
