--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "express": "^3.5.3",
     "express-handlebars": "^3.0.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.2.9"
+    "mongoose": "^5.2.9",
+    "nodebb-plugin-dbsearch": "0.0.10",
+    "redis": "~0.10.1",
+    "connect-redis": "~2.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
